@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*openmpi-1.8.4-r4 (20 Apr 2015)
+
+  20 Apr 2015; Justin Bronder <jsbronder@gentoo.org> +openmpi-1.8.4-r4.ebuild:
+  sync with upstream
+
 *openmpi-1.8.4-r99 (20 Apr 2015)
 
   20 Apr 2015; Justin Bronder <jsbronder@gentoo.org> +openmpi-1.8.4-r99.ebuild,
